More cleanup and fix default theme

--- a/TODO
+++ b/TODO
@@ -1,16 +1,17 @@
 RIGHT CLICK OPTIONS
 MOVE MOVIE CARDS
 SORT & FILTER MOVIES
-MAKE IT SO U CAN'T RATE SOMEONE ELSES MOVIE IN THE DETAILS MODAL
+MAKE IT SO U CAN'T RATE SOMEONE ELSES MOVIE IN THE DETAILS MODAL ✅
 MAKE THE ALSO WATCH THINGY ACTUALLY REAL
 
 USE OMDB FOR IMDB & RT RATINGS ✅
 MAKE STREAMING SERVICES SHOW ON DETAIL MODAL ✅
 MAKE AI ADD MOVIE WORK AGAIN WITH NEW API ✅
-FIX AI RECOMMENDATIONS MOVIE CARD
+FIX AI RECOMMENDATIONS MOVIE CARD 
 MAKE THE RATINGS SHOW ON MOVIE CARDS ✅
-FIX STYLES (AGAIN) (FOR EXAMPLE AI RECOMMENDATIONS BUTTON)
+FIX STYLES (AGAIN) (FOR EXAMPLE AI RECOMMENDATIONS BUTTON) ✅
 MAKE SO YOU CAN'T MODIFY GRID SIZE WHEN IN LIST VIEW
 MAKE STYLES FOR DETAILS MODAL SEPARATE FROM MOVIE CARDS (LIKE GENRE-TAG) ✅
 MAKE IT KEEP SORTED BY THE CHOSEN OPTION WHEN ADDING NEW MOVIE
 FIX LIST STYLES
+MAKE SO WHEN YOU ADD FOR WATCHLIST IT DOESN'T RERENDER THE MOVIES
