Style more grid sizes and list view

--- a/TODO
+++ b/TODO
@@ -15,3 +15,6 @@ MAKE STYLES FOR DETAILS MODAL SEPARATE FROM MOVIE CARDS (LIKE GENRE-TAG) ✅
 MAKE IT KEEP SORTED BY THE CHOSEN OPTION WHEN ADDING NEW MOVIE
 FIX LIST STYLES
 MAKE SO WHEN YOU ADD FOR WATCHLIST IT DOESN'T RERENDER THE MOVIES
+
+FIX SETTINGS FOR WHEN NOT LOGGED IN
+MAKE TAGS CLICKABLE AND FILTER MOVIES BY TAG
